--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             <div>
                 <label for="fileNameSelect">Select MP3 File:</label>
                 <select id="fileNameSelect">
-                    <option value="ringtone.mp3">Ringtone (Default)</option>
-                    <option value="Scary Music.mp3">High Alert Sound</option>
-                    <option value="donkey.mp3">Voice Warning</option>
+                    <option value="ringtone.mp3">Ringtone</option>
+                    <option value="Scary Music.mp3">Scary Music</option>
+                    <option value="donkey.mp3">donkey</option>
                     </select>
             </div>
             <div>
@@ -283,3 +283,4 @@
 
 </body>
 </html>
+
